# JTTB

./: CMakeLists.txt  LICENSE  README.md
docs/: stacks.md
examples/: acey-ducey.txt  coco-word-defs.txt  coco-word-quiz.txt  data-example1.txt  district-vote-report2.txt  eliza.txt  string-example1.txt  the-wave.txt
jttb/: CMakeLists.txt  Makefile  jttb.asm  jttb.c  tinybasic_orig.asm
tbasm/: CMakeLists.txt  FindTbasm.cmake  Makefile  tbasm.c  tbasm.cmake
tbvm/: CMakeLists.txt  Makefile  tbvm.c  tbvm.h  tbvm_opcodes.h  tbvm_program.asm
